Fix layout issue

--- a/src/Components/Music/MusicMain.css
+++ b/src/Components/Music/MusicMain.css
@@ -397,7 +397,7 @@ section::before {
     justify-content: space-between;
     align-items: stretch;
     width: 100%;
-    gap: 40px;
+    gap: 20px;
     box-sizing: border-box;
 }
 
@@ -410,7 +410,7 @@ section::before {
 /* Left Panel: Music Production Stack */
 .music-stack {
     flex: 1;
-    max-width: 50%;
+    max-width: calc(50% - 10px);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -512,7 +512,7 @@ section::before {
 /* Right Panel: Fun Fact Terminal */
 .music-terminal {
     flex: 1;
-    max-width: 50%;
+    max-width: calc(50% - 10px);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -842,8 +842,6 @@ section::before {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    position: relative;
-
 }
 
 .collab-section::before {
@@ -862,6 +860,7 @@ section::before {
 
 .collaborator-wrapper {
     width: 100%;
+    max-height: fit-content;
     margin-bottom: -40px;
 }
 
@@ -1118,7 +1117,6 @@ section::before {
     align-items: center;
     width: 100%;
     position: relative;
-
 }
 
 .player-wrapper {
@@ -1127,15 +1125,19 @@ section::before {
 
 .player {
     display: flex;
-    gap: 2vw;
+    aspect-ratio: 2/1;
     width: 100%;
-    aspect-ratio: 2 / 1;
+    gap: 20px;
     box-sizing: border-box;
+    justify-content: space-between; 
+    flex-direction: row;
+    align-items: stretch;
 }
 
 .disc-wrapper {
+    max-width: calc(50% - 10px);
     flex: 1;
-    width: 100%;
+    height: auto;
     padding: 20px;
     border-radius: 24px;
     aspect-ratio: 1;
@@ -1149,8 +1151,6 @@ section::before {
     width: 100%;
     height: 100%;
     animation: play 2.5s linear infinite;
-
-
 }
 
 .disc-container {
@@ -1183,8 +1183,9 @@ section::before {
 }
 
 .playercpanel {
-    width: 100%;
-    max-height: 100%;
+    max-width: calc(50% - 10px);
+    aspect-ratio: 1;
+    overflow: hidden; /* Prevent overall stretching */
     border-radius: 24px;
     border: 2px solid rgb(143, 143, 143);
     display: flex;
@@ -1202,35 +1203,34 @@ section::before {
     text-align: center;
 }
 
-
 .playerinfo .np-text {
     width: 100%;
     text-align: left;
     font-weight: 400;
-    font-size: clamp(0.5rem, 2vw, 1rem);
+    font-size: clamp(1rem, min(calc(0.7rem + 1vw), calc(0.7rem + 1vh)), 3rem);
 }
 
 .playerinfo h3 {
     margin-top: 10px;
-    font-size: clamp(1rem, calc(1rem + 1.5vw), 3rem);
+    font-size: clamp(2rem, min(calc(1rem + 2.5vw), calc(1rem + 2.5vh)), 4rem);
     font-weight: bold;
 }
 
 .playerinfo .release-type {
-    font-size: clamp(1rem, calc(0.4rem + 1vw), 1.5rem);
+    font-size: clamp(1rem, min(calc(0.8rem + 1.5vw), calc(0.8rem + 1.5vh)), 3rem);
     font-weight: 300;
     color: #ffffff;
 }
 
 .playerinfo .release-artists {
-    font-size: clamp(1rem, calc(0.4rem + 1vw), 2rem);
+    font-size: clamp(1rem, min(calc(1rem + 1vw), calc(1rem + 1vh)), 2rem);
     font-weight: 600;
     color: #bababa;
     margin-top: 10px;
 }
 
 .playerinfo span {
-    font-size: clamp(0.9rem, 1.2vw, 2rem);
+    font-size: clamp(1rem, min(2vw, 2vh), 2rem);
     box-sizing: border-box;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.878);
@@ -1336,7 +1336,6 @@ section::before {
     transform: scale(0.95) translateY(5px);
 }
 
-/* Player Browser Section */
 .playerbrowser {
     padding: 20px;
     border-radius: 24px;
@@ -1345,12 +1344,7 @@ section::before {
     width: 100%;
     background: rgba(27, 27, 27, 0.5);
     border-top: 2px solid rgba(255, 255, 255, 0.595);
-    overflow: hidden;
-
-    scrollbar-width: thin;
-    scrollbar-color: rgba(255, 127, 179, 0.7) transparent;
     position: relative;
-    scroll-behavior: smooth;
 }
 
 .playerbrowser::-webkit-scrollbar {
@@ -1375,7 +1369,9 @@ section::before {
 
 .release-explorer {
     flex: 0.75;
-    overflow-y: auto;
+    min-height: 0;
+    overflow: scroll;
+    height: 100%;
 }
 
 .release-filter {
@@ -1383,6 +1379,12 @@ section::before {
     align-items: right;
     overflow-y: auto;
     text-align: right;
+}
+
+.release-explorer,
+.release-filter {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(255, 127, 179, 0.7) transparent;
 }
 
 .sort-container {
@@ -1459,7 +1461,7 @@ section::before {
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 768px), (orientation: portrait) {
     .music {
         margin: 0 5%;
     }
@@ -1631,9 +1633,15 @@ section::before {
 
     .player {
         flex-direction: column;
+        aspect-ratio: 1;
+    }
+
+    .disc-wrapper {
+        max-width: 100%;
     }
 
     .playercpanel {
+        max-width: 100%;
         min-height: 600px;
     }
 }
